# forte

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: index.md  prd.md  project-overview.md  solution-design.md  style-guide.md
docs/input/: 2026-07-19 interview-solution-design.md  2026-07-19 usage-feedback.md  2026-07-20 claude-kb-feature-requests.md  2026-07-20 interview-agent-layer.md  2026-07-21 agent-feedback.md  2026-07-21 interview-semantic-search.md  interview-prd.md  interview-project-overview.md  usage-feedback.md
docs/spec/: cli-base.md  cli-hello-world.md  config-writer.md  db-schema.md  forte-agent.md  forte-doc.md  forte-entity.md  forte-init.md  forte-schema.md  forte-search.md  vault-layout.md
tests/: conftest.py  smoketest-agent.sh  smoketest.sh  test_agent.py  test_agent_cli.py  test_chunking.py  test_cli_smoke.py  test_commit.py  test_config_service.py  test_config_writer.py  test_cost.py  test_db_schema.py  test_discovery.py  test_doc_cli.py  test_document_markdown.py  test_document_repository.py  test_document_service.py  test_embedding.py  test_entity_cli.py  test_entity_markdown.py  test_entity_repository.py  test_entity_service.py  test_forte_init.py  test_index_repository.py  test_indexing.py  test_linking.py  test_llm.py  test_mention_repository.py  test_pipeline_models.py  test_prompts.py  test_reembed.py  test_reindex_cli.py  test_retrieval.py  test_review.py  test_review_tui.py  test_schema_cli.py  test_schema_repository.py  test_schema_service.py  test_search.py  test_search_cli.py  (+4 more)
tests/fixtures/: sample.docx
(+70 files in other folders)
