[project]
name = "forte"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pyyaml>=6.0.3",
    "python-docx",
    "pypdf",
]

[project.scripts]
forte = "forte.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forte"]

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
